[package]
name = "disturbance"
version = "0.1.0"
authors = ["Rohan Jain <crodjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.5.0"
ctrlc = "3.1.3"
failure = "0.1.6"
reqwest = "0.9.22"
structopt = "0.3.1"
